// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<div>
  <div
    class="Search"
  >
    <form
      class="Search-input"
    >
      <input
        class="form-control form-control-lg"
        placeholder="Search"
        type="text"
        value=""
      />
    </form>
    <div
      class="container"
    >
      <div
        class="row"
      >
        <div
          class="col-4"
        />
        <div
          class="col-8"
        >
          <p>
            Loading...
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders 2`] = `
<div>
  <div
    class="Search"
  >
    <form
      class="Search-input"
    >
      <input
        class="form-control form-control-lg"
        placeholder="Search"
        type="text"
        value=""
      />
    </form>
    <div
      class="container"
    >
      <div
        class="row"
      >
        <div
          class="col-4"
        />
        <div
          class="col-8"
        >
          <div
            class="Error"
          >
            <h2>
              Something went wrong.
            </h2>
            <div
              class="content container"
            >
              <div
                class="row"
              >
                <div
                  class="col"
                >
                  <p>
                    Unable to load services.
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
